--- a/client.html
+++ b/client.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>client</title>
+        <title>client side</title>
     </head>
     <body>
         <label>Name:</lable><input id="name"></input><button id="btnConnect">connect</button>
