fix html label typo

--- a/client.html
+++ b/client.html
@@ -7,12 +7,12 @@
         <title>client side</title>
     </head>
     <body>
-        <label>Name:</lable><input id="name"></input><button id="btnConnect">connect</button>
+        <label>Name:</label><input id="name"></input><button id="btnConnect">connect</button>
         <button id="btnDisconnect">Disconnect</button>
         <br>
-        <label>private message for:</lable><input id="sendto"></input>
+        <label>private message for:</label><input id="sendto"></input>
         <br>
-        <label>message:</lable><input id="msg" size="60"></input><button id="btnSend">Send</button>
+        <label>message:</label><input id="msg" size="60"></input><button id="btnSend">Send</button>
         <br><span>上線清單：</span>
         <div id="list" style="border:1px solid black;width:500px"></div>
         <span>訊息：</span>
